--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
 Source: trac-mastertickets
 Section: web
 Priority: optional
-Build-Depends: python-support, python-setuptools, python-all, debhelper (>= 7)
+Build-Depends: python-setuptools, python-all, debhelper (>= 7), dh-python
 Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
 Uploaders: W. Martin Borgert <debacle@debian.org>
-Standards-Version: 3.9.2
+Standards-Version: 3.9.5
 Homepage: http://trac-hacks.org/wiki/MasterTicketsPlugin
 
 Package: trac-mastertickets
