--- a/debian/rules
+++ b/debian/rules
@@ -42,7 +42,7 @@ binary-indep: build install
 	dh_installdocs README
 	dh_compress
 	dh_fixperms
-	dh_pysupport
+	dh_python2
 	dh_installdeb
 	dh_gencontrol
 	dh_md5sums
