--- a/debian/rules
+++ b/debian/rules
@@ -2,21 +2,16 @@
 # -*- makefile -*-
 
 PACKAGE=trac-mastertickets
-SRCURL=https://github.com/coderanger/trac-mastertickets/tarball
-SRCREV=b8715f528a
-VERSION=3.0.2+r${SRCREV}
 
 DH_VERBOSE=1
-
-get-orig-source:
-	wget ${SRCURL}/${SRCREV} -O ${PACKAGE}_${VERSION}.orig.tar.gz
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -rf build-stamp TracMasterTickets.egg-info
+	rm -rf build-stamp *.egg-info
 	python setup.py clean
-	rm -rf build/
+	-rm -rf build/
+	-rm -rf dist/
 	dh_clean 
 
 build: build-arch build-indep
