--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,12 @@
 Source: trac-mastertickets
 Section: web
 Priority: optional
-Build-Depends: python-setuptools, python-all, debhelper (>= 7), dh-python
+Build-Depends: python-setuptools, python-all, debhelper (>= 9), dh-python
 Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
 Uploaders: W. Martin Borgert <debacle@debian.org>
-Standards-Version: 3.9.6
+Standards-Version: 3.9.7
 Homepage: http://trac-hacks.org/wiki/MasterTicketsPlugin
+X-Python-Version: >=2.7
 
 Package: trac-mastertickets
 Architecture: all
