--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: trac-mastertickets
 Section: web
 Priority: optional
-Build-Depends: python-setuptools, python-all, debhelper (>= 9), dh-python
+Build-Depends: debhelper (>= 9), python (>= 2.7), dh-python, python-setuptools
 Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
 Uploaders: W. Martin Borgert <debacle@debian.org>
 Standards-Version: 3.9.7
