--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 export PYBUILD_NAME=trac-mastertickets
+export PYBUILD_DISABLE=test
 
 %:
 	dh $@ --with python2 --buildsystem=pybuild
