--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ X-Python-Version: >=2.7
 Package: trac-mastertickets
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, trac (>= 0.12)
-Recommends: libjs-jquery, trac-graphviz
+Recommends: libjs-jquery, graphviz
 Description: adds inter-ticket dependencies to Trac
  This Trac plugin adds "blocks" and "blocked by" fields to each
  ticket, enabling you to express dependencies between tickets. It
